# tackler-rs

./: .gitignore  ALLOWED_SIGNERS  ALLOWED_SIGNERS.asc  Cargo.toml  NOTICE  README.adoc  README.md
src/: main.rs  txn_antlr.rs
src/txn_antlr/: TxnParser.g4  readme.adoc  txnparser.rs
tackler-api/: Cargo.toml
tackler-api/src/: lib.rs  metadata.rs
tackler-cli/: Cargo.toml  README.md
tackler-cli/src/: main.rs
tackler-core/: Cargo.toml  README.md
tackler-core/src/: lib.rs  parser.rs
tackler-core/src/parser/: txn_antlr.rs
tackler-core/src/parser/txn_antlr/: readme.adoc
tackler-rs/: Cargo.toml  README.md
tackler-rs/src/: main.rs
tests/: 0001-test.txn  err-0001.txn  err-0002.txn  format-ascii.txn  format.txn  utf8-journal.txn
